--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- Primary Meta Tags -->
+    <title>Check Weather Report </title>
+    <meta name="title" content="Check Weather Report ">
+    <meta name="description" content="">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://weather-check-charlie.netlify.app/">
+    <meta property="og:title" content="Check Weather Report ">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://image.shutterstock.com/image-vector/weather-forecast-widget-concept-temperature-260nw-1944970438.jpg">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://weather-check-charlie.netlify.app/">
+    <meta property="twitter:title" content="Check Weather Report ">
+    <meta property="twitter:description" content="">
+    <meta property="twitter:image" content="https://image.shutterstock.com/image-vector/weather-forecast-widget-concept-temperature-260nw-1944970438.jpg">
   </head>
   <body>
     <div id="root"></div>
